Fix issue with alignment of within alignment of action select box

--- a/html/pfappserver/root/static/app/application.css
+++ b/html/pfappserver/root/static/app/application.css
@@ -71,6 +71,10 @@ form .uneditable {
     text-decoration: none;
 }
 
+.input-append.input-prepend select {
+    vertical-align: top;
+}
+
 .input-prepend .chzn-choices .search-choice,
 .input-append .chzn-choices .search-choice {
     font-size : 14px;
